# utils

./: .gitignore  .gitmodules  utils-win.cpp  utils-win.h
ai/: AGENTS.md  copilot提示词.md
cmake/: QtPacking.cmake  utils.cmake
cxx/: CMakeLists.txt  CMakeSettings.json  conanfile.txt  utils-qt.cpp  utils-win.cpp  utils-win.h
cxx/.github/: copilot-instructions.md
cxx/examples/: CMakeLists.txt  app.cc
cxx/include/utils/: async_timer.hpp  common.h  dll_caller.hpp  file-utils.h  noncopyable.hpp  process.hpp  restart_helper.h  result.hpp  spdlog_wrapper.hpp  utils-linux.h  utils-qt.h  utils-win.h  utils.h
cxx/include/utils/linux/: utils-linux.h
cxx/include/utils/win/: utils-win.h
cxx/src/: CMakeLists.txt  main.cc  main.cpp  utils-linux.cc  utils-win.cc  utils.cc
cxx/src/utils/: file-utils.cc  utils.cc
cxx/src/utils/linux/: utils-linux.cc
cxx/src/utils/qt/: utils-qt.cc
cxx/src/utils/win/: utils-win.cc
cxx/tests/: CMakeLists.txt  utils-test.cc
neovimrc/: .tinyvimrc  .vimrc  .vimrc.bak  README.en.md  README.md  init.vim  linux.config.lua  nvim.config.sh  nvimrc  win.config.lua
neovimrc/lua/: basic.lua  keybindings.lua  plugins-setup.lua
neovimrc/lua/core/: options.lua
neovimrc/lua/plugins/: init.lua
neovimrc/lua/plugins/lsp/: init.lua
neovimrc/lua/util/: init.lua
scripts/: proxy.fish  proxy.sh
tools/bcc/: arf.md  arf.py  tyml.py
vimrc/: init.vim  vim.config.sh
vimrc/lua/: basic.lua  plugins.lua
vimrc/lua/lsp/: nvim-cmp.lua
